--- a/ProjectWork.Data/ProjectWork.Data.csproj
+++ b/ProjectWork.Data/ProjectWork.Data.csproj
@@ -47,10 +47,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EntityConfiguration\CallDetailsConfiguration.cs" />
+    <Compile Include="EntityConfiguration\CommunicationDetailsConfigurations.cs" />
     <Compile Include="EntityConfiguration\ContactHistoryConfiguration.cs" />
     <Compile Include="EntityConfiguration\ContactInfoConfiguration.cs" />
     <Compile Include="EntityConfiguration\EntityBaseConfiguration.cs" />
     <Compile Include="EntityConfiguration\RoleConfiguration.cs" />
+    <Compile Include="EntityConfiguration\StateConfiguration.cs" />
     <Compile Include="EntityConfiguration\UserConfiguration.cs" />
     <Compile Include="EntityConfiguration\UserRoleConfiguration.cs" />
     <Compile Include="Extensions\UserExtensions.cs" />
@@ -59,6 +62,10 @@
     <Compile Include="Infrastructure\IDbFactory.cs" />
     <Compile Include="Infrastructure\IUnitOfWork.cs" />
     <Compile Include="Infrastructure\UnitOfWork.cs" />
+    <Compile Include="Migrations\201705121906437_initial_migration.cs" />
+    <Compile Include="Migrations\201705121906437_initial_migration.Designer.cs">
+      <DependentUpon>201705121906437_initial_migration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\EntityBaseRepository.cs" />
@@ -73,6 +80,11 @@
       <Project>{681f0558-725a-4ec8-9132-87d51375465f}</Project>
       <Name>ProjectWork.Entities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201705121906437_initial_migration.resx">
+      <DependentUpon>201705121906437_initial_migration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
