--- a/ProjectWork.Entities/ProjectWork.Entities.csproj
+++ b/ProjectWork.Entities/ProjectWork.Entities.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CallDetails.cs" />
+    <Compile Include="CommunicationDetails.cs" />
+    <Compile Include="State.cs" />
     <Compile Include="ContactHistory.cs" />
     <Compile Include="ContactInfo.cs" />
     <Compile Include="Error.cs" />
