latest code change

--- a/ProjectWork.Data/ProjectWork.Data.csproj
+++ b/ProjectWork.Data/ProjectWork.Data.csproj
@@ -53,6 +53,7 @@
     <Compile Include="EntityConfiguration\ContactInfoConfiguration.cs" />
     <Compile Include="EntityConfiguration\EntityBaseConfiguration.cs" />
     <Compile Include="EntityConfiguration\RoleConfiguration.cs" />
+    <Compile Include="EntityConfiguration\SchduleConfiguration.cs" />
     <Compile Include="EntityConfiguration\StateConfiguration.cs" />
     <Compile Include="EntityConfiguration\UserConfiguration.cs" />
     <Compile Include="EntityConfiguration\UserRoleConfiguration.cs" />
@@ -65,6 +66,26 @@
     <Compile Include="Migrations\201705121906437_initial_migration.cs" />
     <Compile Include="Migrations\201705121906437_initial_migration.Designer.cs">
       <DependentUpon>201705121906437_initial_migration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201705130431563_Schedule Entity.cs" />
+    <Compile Include="Migrations\201705130431563_Schedule Entity.Designer.cs">
+      <DependentUpon>201705130431563_Schedule Entity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201705130858099_initial_migration1.cs" />
+    <Compile Include="Migrations\201705130858099_initial_migration1.Designer.cs">
+      <DependentUpon>201705130858099_initial_migration1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201705130927201_initial_migration11.cs" />
+    <Compile Include="Migrations\201705130927201_initial_migration11.Designer.cs">
+      <DependentUpon>201705130927201_initial_migration11.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201705130928047_initial_migration2.cs" />
+    <Compile Include="Migrations\201705130928047_initial_migration2.Designer.cs">
+      <DependentUpon>201705130928047_initial_migration2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201705131051494_state update.cs" />
+    <Compile Include="Migrations\201705131051494_state update.Designer.cs">
+      <DependentUpon>201705131051494_state update.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -84,6 +105,21 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201705121906437_initial_migration.resx">
       <DependentUpon>201705121906437_initial_migration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705130431563_Schedule Entity.resx">
+      <DependentUpon>201705130431563_Schedule Entity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705130858099_initial_migration1.resx">
+      <DependentUpon>201705130858099_initial_migration1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705130927201_initial_migration11.resx">
+      <DependentUpon>201705130927201_initial_migration11.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705130928047_initial_migration2.resx">
+      <DependentUpon>201705130928047_initial_migration2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705131051494_state update.resx">
+      <DependentUpon>201705131051494_state update.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
