--- a/ProjectWork.Services/ProjectWork.Services.csproj
+++ b/ProjectWork.Services/ProjectWork.Services.csproj
@@ -43,10 +43,14 @@
     <Compile Include="Abstract\IContactInfoService.cs" />
     <Compile Include="Abstract\IEncryptionService.cs" />
     <Compile Include="Abstract\IMembershipService.cs" />
+    <Compile Include="Abstract\IStateService.cs" />
     <Compile Include="ContactInfoService.cs" />
     <Compile Include="EncryptionService.cs" />
+    <Compile Include="Abstract\ISchedulerService.cs" />
     <Compile Include="MembershipService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScheduleService.cs" />
+    <Compile Include="StateService.cs" />
     <Compile Include="Utilities\MembershipContext.cs" />
   </ItemGroup>
   <ItemGroup />
