--- a/ProjectWork.Web/ProjectWork.Web.csproj
+++ b/ProjectWork.Web/ProjectWork.Web.csproj
@@ -275,6 +275,8 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ContactInfoesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ScheduleController.cs" />
+    <Compile Include="Controllers\StateController.cs" />
     <Compile Include="Controllers\UserHomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -285,6 +287,8 @@
     <Compile Include="Infrastructure\MessageHandlers\ProjectWorkAuthHandler.cs" />
     <Compile Include="Infrastructure\Validators\AccountViewModelValidators.cs" />
     <Compile Include="Infrastructure\Validators\ContactInfoModelValidators.cs" />
+    <Compile Include="Infrastructure\Validators\ScheduleViewModelValidators.cs" />
+    <Compile Include="Infrastructure\Validators\StateViewModelValidators.cs" />
     <Compile Include="Mapping\AutoMapperConfiguration.cs" />
     <Compile Include="Migrations\201704230750035_initial_migration.cs" />
     <Compile Include="Migrations\201704230750035_initial_migration.Designer.cs">
@@ -297,6 +301,8 @@
     <Compile Include="Models\LoginViewModel.cs" />
     <Compile Include="Models\ProjectModels.cs" />
     <Compile Include="Models\RegistrationViewModel.cs" />
+    <Compile Include="Models\ScheduleViewModel.cs" />
+    <Compile Include="Models\StateViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
